# watchdog-gov

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  prd.md  pyproject.toml  todo.md
app/: config.py  database.py  main.py
app/middleware/: __init__.py  rate_limit.py
app/models/: __init__.py  bill.py  conversation.py  favorite.py  finance.py  legislator.py  news.py  vote.py
app/routers/: __init__.py  chat.py  legislators.py
app/services/: __init__.py  ai_agent.py  cache_config.py  cache_service.py  congress_api.py  fec_api.py  fuzzy_search.py  news_api.py
app/templates/: base.html  index.html
app/templates/partials/: autocomplete_results.html
tests/: test_cache_config.py  test_cache_service.py  test_favorite_model.py  test_fuzzy_search.py  test_legislator_model.py  test_news_api.py  test_rate_limit.py
